# arucoSwarm

./: .gitignore  ArucoTest.cpp  CMakeLists.txt  CMakeLists.txtt  README.MD  arucoFlow.dio  arucoInstall.sh  bashrc_extension.sh  cameraCalib.cpp  config.json  config2.json  drone_config.json  followAruco.cpp  macAdresses.txt  runAruco.cpp  runAruco.h  server.py  sshClient.py  swarm5.yaml  test.cpp  test.py  webcamCalib.yaml  webcamFocus.sh
Calibration/: camera_calibration.py  camera_collection.py
Camera Calibration/: VCS.py  camera_calibration.py  camera_collection.py  drone1.yaml  load_calibration_example.py
Camera Calibration/Calib1/: Calibration.npy  Calibration.yaml
Image Test/: Makefile  Webcam.py  camTest.py  funcs.py  funcs_lib.cpp
Tello Test/: connect_to_wifi.py  cont.py  control.py  lift.py  lift2.py
arucos/: TelloUtils.py  bartest.py
calib/: laptopWebcamCalib.yaml  rpicamcalib.yaml
drone_config_backups/: config_run.json  drone-1.json  drone-2.json  drone-3.json  drone-4.json
hardtest/: buttonDetector.py  ledPress.py  ledRelease.py  test.sh
include/: Drone.h  SerialTello.h  aruco.h  aruco2.h  arucoCalc.hpp  arucoUtils.h  calc.h  constants.h  detector.hpp  drone.h  followAruco.h  runAruco.h
revamped/: ArucoTools.py  SwarmControl.py  TelloObject.py  VCS.py  aruco_calc.py  main.py  streamoff.py  test.py  test2.py
scripts/: arucoInstall.sh  change_tello_conf.sh  change_wpa_sup.sh  checkconnections.sh  devls.txt
src/: Drone.cpp  SerialTello.cpp  aruco.cpp  aruco2.cpp  arucoCalc.cpp  arucoUtils.cpp  calc.cpp  detector.cc  detector.cxx  drone.cpp  drone_client.cc
tello-swarm-utils/: ap_connect.py  liftoff.py  npToYaml.py
tello_supllicants/: drone2.conf
(+31 files in other folders)
